2006-09-22  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-backward): Fix return value, number or nil.

2005-05-22  Satoru Takabayashi  <satoru@namazu.org>

	* migemo.el (migemo-isearch-min-length): New custom variable.
	(migemo-get-pattern): Return "" if input word is shorter than
	migemo-isearch-min-length.  Applied a patch by Kenichi Kurihara
	<kurihara at mi.cs.titech.ac.jp>. 

2005-02-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-isearch-toggle-migemo): Follow new
	arguments of `isearch-lazy-highlight-new-loop'.

2004-11-27  Satoru Takabayashi  <satoru@namazu.org>

	* migemo (segment): Modify the regex.

	* migemo.rb.in (String::to_katakana): Remove unnecessary \\1 in the
	regex. 

	* migemo.rb.in (String::quotemeta): Removed.
	(String): Use Regexp.quote
	* migemo-regex.rb
	(MigemoRegex::RegexEmacsRenderer::escape_string): Ditto. 
	(MigemoRegex::RegexRenderer::insert): Ditto.

	* migemo-regex.rb (MigemoRegex::RegexCompiler::push): Prevent
	adding an empty string.
	(MigemoRegex::RegexCompiler::optimize1): Use Regexp.quote and fix
	the regex creation bug. (preceding ^ is required)

2004-10-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-accept-process-output-timeout-msec): New
	variable.
	(migemo-get-pattern): Use
	`migemo-accept-process-output-timeout-msec'.
	- Thanks to URA Takefumi's for the suggestion.

2004-10-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-isearch-toggle-migemo): Refresh
	lazy-highlight.
	- Thanks to Masayuki FUJII's for the suggestion.

2004-08-02  Satoru Takabayashi  <satoru@namazu.org>

	* ChangeLog: Obfuscate email addresses to prevent spams.

2004-06-13  Satoru Takabayashi  <satoru@namazu.org>

	* migemo (segment): Refine the pattern.

	* migemo.el.in (migemo-replace-in-string): Simplified for performance.
	(migemo-get-pattern): Adopt the change of migemo-replace-in-string.
	(migemo-if): Removed.

	* configure.in: Bumped version number to 0.41.
