@@ -1,7 +1,7 @@
-;; -*- mode: Emacs-Lisp; coding: euc-jp-unix -*-
+;; -*- mode: Emacs-Lisp; coding: euc-jp-unix; lexical-binding: t -*-
 ;;; migemo.el - Japanese incremental search trough dynamic pattern expansion
 
-;; $Id: migemo.el.in,v 1.8 2006/09/22 08:43:33 shirai Exp $
+;; $Id: migemo.el.in,v 1.9 2012/06/24 04:09:59 kaworu Exp $
 ;; Copyright (C) Satoru Takabayashi
 
 ;; Author: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>
